--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "user-page",
   "version": "0.1.0",
+  "homepage": "https://Kathrin0202.github.io/user-page",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
